Implemented event service and image service

--- a/AirsoftApplication/Web/AirsoftApplication.Web/appsettings.json
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "GoogleCredentialFile": "C:\\Users\\nikol\\Downloads\\durable-firefly-314920-9ac4b7c6e43f.json",
+  "GoogleCloudStorageBucket": "airsoft_application_bucket",
+
   "AllowedHosts": "*"
 }
