--- a/AirsoftApplication/Services/AirsoftApplication.Services.Data/AirsoftApplication.Services.Data.csproj
+++ b/AirsoftApplication/Services/AirsoftApplication.Services.Data/AirsoftApplication.Services.Data.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.52.0" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
@@ -21,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\AirsoftApplication.Data.Common\AirsoftApplication.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\AirsoftApplication.Data.Models\AirsoftApplication.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Web\AirsoftApplication.Web.ViewModels\AirsoftApplication.Web.ViewModels.csproj" />
     <ProjectReference Include="..\AirsoftApplication.Services.Mapping\AirsoftApplication.Services.Mapping.csproj" />
   </ItemGroup>
 
