--- a/AirsoftApplication/Services/AirsoftApplication.Services.Data/AirsoftApplication.Services.Data.csproj
+++ b/AirsoftApplication/Services/AirsoftApplication.Services.Data/AirsoftApplication.Services.Data.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\AirsoftApplication.Common\AirsoftApplication.Common.csproj" />
     <ProjectReference Include="..\..\Data\AirsoftApplication.Data.Common\AirsoftApplication.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\AirsoftApplication.Data.Models\AirsoftApplication.Data.Models.csproj" />
     <ProjectReference Include="..\..\Web\AirsoftApplication.Web.ViewModels\AirsoftApplication.Web.ViewModels.csproj" />
