--- a/AirsoftApplication/Web/AirsoftApplication.Web.ViewModels/AirsoftApplication.Web.ViewModels.csproj
+++ b/AirsoftApplication/Web/AirsoftApplication.Web.ViewModels/AirsoftApplication.Web.ViewModels.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\AirsoftApplication.Common\AirsoftApplication.Common.csproj" />
     <ProjectReference Include="..\..\Data\AirsoftApplication.Data.Models\AirsoftApplication.Data.Models.csproj" />
     <ProjectReference Include="..\..\Services\AirsoftApplication.Services.Mapping\AirsoftApplication.Services.Mapping.csproj" />
   </ItemGroup>
