--- a/AirsoftApplication/Web/AirsoftApplication.Web.Infrastructure/AirsoftApplication.Web.Infrastructure.csproj
+++ b/AirsoftApplication/Web/AirsoftApplication.Web.Infrastructure/AirsoftApplication.Web.Infrastructure.csproj
@@ -13,9 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\AirsoftApplication.Common\AirsoftApplication.Common.csproj" />
+    <ProjectReference Include="..\..\Data\AirsoftApplication.Data.Models\AirsoftApplication.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
