--- a/AirsoftApplication/Web/AirsoftApplication.Web/appsettings.json
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/appsettings.json
@@ -20,5 +20,8 @@
   "GoogleCredentialFile": "C:\\Users\\nikol\\Downloads\\durable-firefly-314920-9ac4b7c6e43f.json",
   "GoogleCloudStorageBucket": "airsoft_application_bucket",
 
+
+  "IronBarCode.LicenseKey": "IRONBARCODE.NIKOLAYGEORGIEV.15525-66B41B4C4C-DXXI4YBS2LDSGEL-2ZGAHVFJT3A6-ODNPE77F6WER-LRCQUBLPCAHW-QWT5O746BR24-DBKCT3-TYEOBEOLBBSBUA-DEPLOYMENT.TRIAL-UH4K72.TRIAL.EXPIRES.01.SEP.2021",
+
   "AllowedHosts": "*"
 }
